--- a/package.json
+++ b/package.json
@@ -20,21 +20,25 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "cypress": "^13.13.2",
+    "formik": "^2.4.6",
     "framer-motion": "^10.12.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "universal-cookie": "^4.0.4",
     "vite-plugin-istanbul": "^6.0.2",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
