--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite --port 3000",
-    "dev": "vite",
+    "dev": "vite dev --port 3000",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,15 +13,14 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.10.4",
+    "@chakra-ui/toast": "^7.0.2",
     "@cypress/code-coverage": "^3.12.44",
     "@cypress/webpack-preprocessor": "^6.0.2",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^3.1.1",
     "axios": "^1.7.9",
     "cypress": "^13.13.2",
     "formik": "^2.4.6",
-    "framer-motion": "^10.12.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -35,7 +34,6 @@
     "tailwindcss": "^3.4.13",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "universal-cookie": "^4.0.4",
     "vite-plugin-istanbul": "^6.0.2",
     "vite-tsconfig-paths": "^5.0.1",
     "yup": "^1.4.0"
