--- a/package.json
+++ b/package.json
@@ -11,22 +11,27 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@types/lodash": "^4.17.15",
     "axios": "^1.6.2",
+    "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/swiper": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
